@@ -1,3 +1,11 @@
+Thu Dec  9 02:58:55 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* vm_core.h: type mismatch.
+
+	* include/ruby/ruby.h : ditto.
+
+	* mvm.c (ruby_vm_specific_ptr): ditto.
+
 Thu Dec  9 01:18:55 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* vm.c (ruby_vmptr_destruct): vm->specific_storage.ptr had same
